--- a/static/styles/twodsix_basic.css
+++ b/static/styles/twodsix_basic.css
@@ -3291,6 +3291,7 @@ input[type="text"].color {
 .card-buttons {
   display: inline-flex;
   padding-bottom: 4px;
+  gap: 2px
 }
 
 /* ******************************
